@@ -6,14 +6,9 @@ use warnings;
 use DateTime;
 use Error::Pure qw(err);
 use Mo qw(build default is);
-use Mo::utils qw(check_bool check_isa check_length check_number check_required);
+use Mo::utils qw(check_isa check_length check_number check_required);
 
 our $VERSION = 0.04;
-
-has active => (
-	default => 1,
-	is => 'ro',
-);
 
 has id => (
 	is => 'ro',
@@ -33,9 +28,6 @@ has valid_to => (
 
 sub BUILD {
 	my $self = shift;
-
-	# Check active.
-	check_bool($self, 'active');
 
 	# Check id.
 	check_number($self, 'id');
@@ -78,7 +70,6 @@ Data::Login::Role - Data object for login role.
  use Data::Login::Role;
 
  my $obj = Data::Login::Role->new(%params);
- my $action = $obj->action;
  my $id = $obj->id;
  my $role = $obj->role;
  my $valid_from = $obj->valid_from;
@@ -93,14 +84,6 @@ Data::Login::Role - Data object for login role.
 Constructor.
 
 =over 8
-
-=item * C<active>
-
-I<It will be removed in near future.>
-
-Active flag.
-It's boolean.
-Default value is 1.
 
 =item * C<id>
 
@@ -133,16 +116,6 @@ It's optional.
 =back
 
 Returns instance of object.
-
-=head2 C<active>
-
- my $active = $obj->active;
-
-I<It will be removed in near future.>
-
-Get active flag.
-
-Returns 0/1.
 
 =head2 C<id>
 
@@ -179,8 +152,6 @@ Returns L<DateTime> object or undef.
 =head1 ERRORS
 
  new():
-         Parameter 'active' must be a bool (0/1).
-                 Value: %s
          Parameter 'id' must be a number.
                  Value: %s
          Parameter 'role' has length greater than '100'.
