@@ -1,6 +1,7 @@
 TODO
 ====
-6.
+6. Be carefull is_valid() in doc. We need to move to better place.
+7.
 
 Applied
 =======
